@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that dispatcher preparation callbacks only run once in production mode.  Mock Routes.reload so that dispatcher preparation callback tests run. [Rick]
+
 * Fix syntax error in dispatcher than wrecked failsafe responses.  #8625 [mtitorenko]
 
 * Scaffolded validation errors set the appropriate HTTP status for XML responses.  #6946, #8622 [Manfred Stienstra, mmmultiworks]
